--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "soccer-club",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,13 +9,15 @@
   },
   "dependencies": {
     "axios": "^1.7.0",
+    "date-fns": "^3.6.0",
     "phosphor-react": "^2.1.5",
     "react": "^18.3.1",
     "react-big-calendar": "^1.12.1",
+    "react-dnd": "^17.0.2",
+    "react-dnd-html5-backend": "^17.0.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
-    "zustand": "^4.5.2",
-    "date-fns": "^3.6.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.9.2",
