--- a/package.json
+++ b/package.json
@@ -8,26 +8,50 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "axios": "^1.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "phosphor-react": "^2.1.5",
+    "dayjs": "^1.11.13",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-big-calendar": "^1.12.1",
-    "react-dnd": "^17.0.2",
-    "react-dnd-html5-backend": "^17.0.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@shadcn/ui": "^0.9.2",
-    "@types/react-big-calendar": "^0.38.7",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.34",
-    "tailwindcss": "^4.0.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.2.0",
-    "vite-imagetools": "^8.0.3",
     "vite-plugin-pwa": "^0.18.0"
   }
 }
